charts/criblio/criblio-ingress.yml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: criblio-ingress
  namespace: cribl-stream
  annotations:
    gethomepage.dev/href: "https://home.k8s.stinnux.cloud"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Cribl Leader
    gethomepage.dev/group: System
    gethomepage.dev/name: Cribl
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`cribl.k8s.stinnux.cloud`)
    kind: Rule
    services:
    - name: criblio-prod-leader
      port: 9000
